tests/cases/should_fail/misc/missing_expression_in_function_call.stderr
error: expected an expression
 --> $DIR/missing_expression_in_function_call.hash:1:11
1 |   l := f(a = );
  |             ^ here
